WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81328
[Qt] QtWebKit documentation missing a few since 4.6 information
https://bugs.webkit.org/show_bug.cgi?id=81328
Summary
[Qt] QtWebKit documentation missing a few since 4.6 information
Teemu Katajisto
Reported
2012-03-16 03:23:33 PDT
QWebSettings::LocalContentCanAccessRemoteUrls, QWebSettings::LocalStorageEnabled and QWebPage::HighlightAllOccurrences miss since 4.6 information. Related Qt 4.8 bugs:
https://bugreports.qt-project.org//browse/QTBUG-8331
https://bugreports.qt-project.org//browse/QTBUG-8329
Attachments
Patch
(2.62 KB, patch)
2012-03-16 03:30 PDT
,
Teemu Katajisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Teemu Katajisto
Comment 1
2012-03-16 03:30:47 PDT
Created
attachment 132241
[details]
Patch
Simon Hausmann
Comment 2
2012-03-16 05:23:35 PDT
Comment on
attachment 132241
[details]
Patch r=me. Thanks Teemu! The commit queue bot will land the change.
WebKit Review Bot
Comment 3
2012-03-16 06:45:53 PDT
Comment on
attachment 132241
[details]
Patch Clearing flags on attachment: 132241 Committed
r111002
: <
http://trac.webkit.org/changeset/111002
>
WebKit Review Bot
Comment 4
2012-03-16 06:45:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug