[Qt] QtWebKit documentation missing a few since 4.6 information https://bugs.webkit.org/show_bug.cgi?id=81328

Patch by Teemu Katajisto <teemu.katajisto@digia.com> on 2012-03-16
Reviewed by Simon Hausmann.

* Api/qwebpage.cpp:
* Api/qwebsettings.cpp:

Canonical link: https://commits.webkit.org/98558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111002 268f45cc-cd09-0410-ab3c-d52691b4dbfc