Source/WebKit/qt/Api/qwebpage.cpp
@@ -1636,6 +1636,7 @@ IntPoint QWebPagePrivate::TouchAdjuster::findCandidatePointForTouch(const IntPoi
    \value FindWrapsAroundDocument Makes findText() restart from the beginning of the document if the end
    was reached and the text was not found.
    \value HighlightAllOccurrences Highlights all existing occurrences of a specific string.
+       (This value was introduced in 4.6.)
 */
 
 /*!
